repair hit area for logo link on tablet landscape view

--- a/grunt/cssSource/_tabletStyles.scss
+++ b/grunt/cssSource/_tabletStyles.scss
@@ -68,6 +68,10 @@
   .site-header {
     @include site-header;
   }
+
+  .homepage-link {
+     @include homepage-link(63px, 211px);
+   }
   
   /*
    * ==========================================================================
